<resources>
    <string name="app_name">VkNews</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="news_label">News</string>
    <string name="authorize">Authorize</string>
    <string name="text">Sample text</string>
    <string name="tv_text">This is a long sample text. It has no meaning. This view is used for viewing text of post from vk in app</string>
    <string name="tv_date">01.01.15</string>
    <string name="author">Name Surname</string>
    <string name="tv_likes_count">100</string>
    <string name="tv_reposts_count">50</string>
    <string name="action_logout">logout</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want exit?</string>
    <string name="logout_positive_answer">Yes</string>
    <string name="logout_negative_answer">No</string>
    <string name="welcome_text">Welcome to simple vk newsfeed client! You can start using this application by clicking \"Authorize\" button.</string>
    <string name="authorization_error">Failed to authorize</string>
    <string name="ll_images">Photo</string>
    <string name="ll_videos">Videos</string>
    <string name="ll_audios">Audios</string>
    <string name="full_photo">Photo</string>
    <string name="error_download">Unable to download photo</string>
    <string name="photo_number">Photo %1$d of %2$d</string>
    <string name="tv_song_title">Get lucky</string>
    <string name="tv_song_author">Daft Punk</string>
    <string name="tv_duration">5:28</string>


    <integer name="com_vk_sdk_AppId">4935099</integer>
</resources>
