<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:padding="5dp"
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_play_to_pause"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_song_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primaryDark"/>

        <TextView
            android:id="@+id/tv_song_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_song_author"
            android:textColor="@color/textSecondary"
            android:textSize="15sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="5dp"
        android:text="@string/tv_duration"
        android:textColor="@color/textSecondary"
        android:textSize="15sp"/>

</LinearLayout>